# baxter_rr_bridge

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
baxter_RR_bridge/: CMakeLists.txt  package.xml  setup.py
baxter_RR_bridge/scripts/: camera_host.py  jointcontroller_host.py
scripts/: camera_host.py  jointcontroller_host.py  peripherals_host.py
