<?xml version="1.0"?>
<package>
  <name>baxter_rr_bridge</name>
  <version>0.0.1</version>
  <description>A package to bridge the ROS-based control interface for the Rethink Robotics Baxter robot to a Robot Raconteur middleware service</description>

  <maintainer email="daniel.kruse@gmail.edu">Daniel Kruse</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/ChopChopperDan/baxter_rr_bridge</url>
  <author email="daniel.kruse@gmail.edu">Daniel Kruse</author> 
  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>RobotRaconteur</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>RobotRaconteur</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
